# cudnn_mnist

./: .gitignore  CMakeLists.txt  README.md  download_mnist.sh
include/: main.h
include/models/: fused_layer.h  layer.h  loss.h  model.h
include/utils/: fp16_dev.h  fp16_emu.h  utils.h
src/: CMakeLists.txt  main.cu
src/model/: fused_layer.cu  layer.cu  loss.cu  model.cu
src/utils/: fp16_dev.cu  fp16_emu.cpp  utils.cu
